[gd_scene load_steps=19 format=3 uid="uid://omtyr30y216y"]

[ext_resource type="Script" uid="uid://d1fptynlrh5ii" path="res://scenes/ui/guideline/free_line_guideline.gd" id="1_bk12r"]
[ext_resource type="Texture2D" uid="uid://d4dlnnpowwib" path="res://assets/icons/remove/remove.png" id="2_hxjir"]
[ext_resource type="FontFile" uid="uid://pwpf8mb16iar" path="res://assets/fonts/Nunito-Bold.ttf" id="3_min85"]
[ext_resource type="Script" uid="uid://dnqvbjci47pqb" path="res://scenes/ui/guideline/rect_guideline_size_label.gd" id="3_rqsgo"]
[ext_resource type="Texture2D" uid="uid://bfy2npcc0ji8w" path="res://assets/icons/move/move.png" id="4_rqsgo"]

[sub_resource type="LabelSettings" id="LabelSettings_68t5v"]
resource_local_to_scene = true
font = ExtResource("3_min85")
font_size = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_min85"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqsgo"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68t5v"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4pxit"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn7f7"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_68t5v"]
default_font = ExtResource("3_min85")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5jbxs"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48sl4"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24jok"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0xv2"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3a5kd"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3je2"]
bg_color = Color(1, 1, 1, 0.0627451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="FreeLineGuideline" type="Node2D"]
script = ExtResource("1_bk12r")

[node name="Line2D" type="Line2D" parent="."]
width = 2.0

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.0
offset_top = 6.0
offset_right = 42.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "Width: 40px
Height: 40px"
label_settings = SubResource("LabelSettings_68t5v")
script = ExtResource("3_rqsgo")

[node name="RemoveButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_bottom = 14.0
grow_horizontal = 0
tooltip_text = "remove line"
theme_override_styles/focus = SubResource("StyleBoxFlat_min85")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_rqsgo")
theme_override_styles/hover = SubResource("StyleBoxFlat_68t5v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4pxit")
theme_override_styles/normal = SubResource("StyleBoxFlat_tn7f7")
icon = ExtResource("2_hxjir")
icon_alignment = 1

[node name="MoveButton" type="Button" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 14.0
tooltip_text = "move line"
mouse_default_cursor_shape = 2
theme = SubResource("Theme_68t5v")
theme_override_styles/focus = SubResource("StyleBoxFlat_5jbxs")
theme_override_styles/disabled = SubResource("StyleBoxFlat_48sl4")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_24jok")
theme_override_styles/hover = SubResource("StyleBoxFlat_t0xv2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3a5kd")
theme_override_styles/normal = SubResource("StyleBoxFlat_e3je2")
icon = ExtResource("4_rqsgo")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="ScreenBackground" type="ColorRect" parent="."]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)
